--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <a
             class="glightbox"
             data-gallery="projekti"
+            href="./build/img/coinaphoto-app.mp4"
+            ><img src="./build/img/coinaphoto.jpg" alt="Coinaphoto"
+          /></a>
+          <a
+            class="glightbox"
+            data-gallery="projekti"
             href="./build/img/kapaprojekt-home.jpg"
             ><img src="./build/img/kapaprojekt-home.jpg" alt="Kapaprojekt"
           /></a>
