--- a/index.html
+++ b/index.html
@@ -1,163 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dusan Stojanovic Portfolio</title>
-    <meta name="description" content="Dusan Stojanovic Portfolio (sort of)" />
-    <link rel="stylesheet" href="./build/style.css?v=0.1" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Dusan Stojanovic Portfolio</title>
+		<meta name="description" content="Dusan Stojanovic Portfolio (sort of)" />
+		<link rel="stylesheet" href="./build/style.css?v=0.1" />
 
-    <!-- Favicons stuff -->
-    <link rel="icon" href="./favicon.ico" sizes="any" />
-    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
-    <link
-      rel="manifest"
-      href="./manifest.webmanifest"
-      crossorigin="use-credentials"
-    />
-    <!-- End - Favicons stuff -->
-  </head>
-  <body>
-    <header>
-      <div class="o-container o-container--md">
-        <h1>Dušan Stojanović</h1>
-        <p>Web/UI Design portfolio</p>
-      </div>
-    </header>
-    <main>
-      <div class="o-container o-container--md">
-        <div class="c-grid">
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/coinaphoto-app.mp4"
-            ><img src="./build/img/coinaphoto.jpg" alt="Coinaphoto"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/kapaprojekt-home.jpg"
-            ><img src="./build/img/kapaprojekt-home.jpg" alt="Kapaprojekt"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/jpr-home.jpg"
-            ><img src="./build/img/jpr-home.jpg" alt="JPR"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/zossma-home.jpg"
-            ><img src="./build/img/zossma-home.jpg" alt="Zossma home"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/helix-home.jpg"
-            ><img src="./build/img/helix-home.jpg" alt="Helix equities"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/fourview-profile.jpg"
-            ><img src="./build/img/fourview-profile.jpg" alt="Fourview profile"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/ED-home.jpg"
-            ><img src="./build/img/ED-home.jpg" alt="EtonDigital home"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/DH-home.jpg"
-            ><img src="./build/img/DH-home.jpg" alt="Digital horse"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/Frachtbox-home.jpg"
-            ><img src="./build/img/Frachtbox-home.jpg" alt="Frachtbox"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/zossma-product.jpg"
-            ><img src="./build/img/zossma-product.jpg" alt="Zossma product"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/aurora-kursevi.jpg"
-            ><img src="./build/img/aurora-kursevi.jpg" alt="Aurora kursevi"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/bgn-home.jpg"
-            ><img src="./build/img/bgn-home.jpg" alt="BGnekretnine"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/afterproject-home.jpg"
-            ><img src="./build/img/afterproject-home.jpg" alt="Afterproject"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/hampleton-home.jpg"
-            ><img src="./build/img/hampleton-home.jpg" alt="Hampleton"
-          /></a>
-          <a
-            class="glightbox"
-            data-gallery="projekti"
-            href="./build/img/sports4kids-home.jpg"
-            ><img src="./build/img/sports4kids-home.jpg" alt="Sports4kids"
-          /></a>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <div class="o-container o-container--md">
-        <ul>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/dusans/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg role="presentation" class="o-icon">
-                <use xlink:href="build/img/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://dribbble.com/StDusan"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg role="presentation" class="o-icon">
-                <use xlink:href="build/img/icons.svg#icon-dribbble"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="mailto:stdusan@gmail.com">
-              <svg role="presentation" class="o-icon">
-                <use xlink:href="build/img/icons.svg#icon-email"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+		<!-- Favicons stuff -->
+		<link rel="icon" href="./favicon.ico" sizes="any" />
+		<link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+		<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+		<link rel="manifest" href="./manifest.webmanifest" crossorigin="use-credentials" />
+		<!-- End - Favicons stuff -->
+	</head>
+	<body>
+		<header>
+			<div class="o-container o-container--md">
+				<h1>Dušan Stojanović</h1>
+				<p>Web/UI Design portfolio</p>
+			</div>
+		</header>
+		<main>
+			<div class="o-container o-container--md">
+				<div class="c-grid">
+					<a class="glightbox" href="./build/img/coinaphoto-app.mp4"><img src="./build/img/coinaphoto.jpg" alt="Coinaphoto" /></a>
+					<a class="glightbox" href="./build/img/kapaprojekt-home.jpg"><img src="./build/img/kapaprojekt-home.jpg" alt="Kapaprojekt" /></a>
+					<a class="glightbox" href="./build/img/jpr-home.jpg"><img src="./build/img/jpr-home.jpg" alt="JPR" /></a>
+					<a class="glightbox" href="./build/img/zossma-home.jpg"><img src="./build/img/zossma-home.jpg" alt="Zossma home" /></a>
+					<a class="glightbox" href="./build/img/helix-home.jpg"><img src="./build/img/helix-home.jpg" alt="Helix equities" /></a>
+					<a class="glightbox" href="./build/img/fourview-profile.jpg"><img src="./build/img/fourview-profile.jpg" alt="Fourview profile" /></a>
+					<a class="glightbox" href="./build/img/ED-home.jpg"><img src="./build/img/ED-home.jpg" alt="EtonDigital home" /></a>
+					<a class="glightbox" href="./build/img/DH-home.jpg"><img src="./build/img/DH-home.jpg" alt="Digital horse" /></a>
+					<a class="glightbox" href="./build/img/Frachtbox-home.jpg"><img src="./build/img/Frachtbox-home.jpg" alt="Frachtbox" /></a>
+					<a class="glightbox" href="./build/img/zossma-product.jpg"><img src="./build/img/zossma-product.jpg" alt="Zossma product" /></a>
+					<a class="glightbox" href="./build/img/aurora-kursevi.jpg"><img src="./build/img/aurora-kursevi.jpg" alt="Aurora kursevi" /></a>
+					<a class="glightbox" href="./build/img/bgn-home.jpg"><img src="./build/img/bgn-home.jpg" alt="BGnekretnine" /></a>
+					<a class="glightbox" data-glightbox="title: After Project (2011);" href="./build/img/afterproject-home.jpg"><img src="./build/img/afterproject-home.jpg" alt="Afterproject" /></a>
+					<a class="glightbox" data-glightbox="title: Hampleton Partners (2013);" href="./build/img/hampleton-home.jpg"><img src="./build/img/hampleton-home.jpg" alt="Hampleton" /></a>
+					<a class="glightbox" data-glightbox="title: Sports4kids (2012);" href="./build/img/sports4kids-home.jpg"><img src="./build/img/sports4kids-home.jpg" alt="Sports4kids" /></a>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<div class="o-container o-container--md">
+				<ul>
+					<li>
+						<a href="https://www.linkedin.com/in/dusans/" target="_blank" rel="noopener noreferrer">
+							<svg role="presentation" class="o-icon">
+								<use xlink:href="build/img/icons.svg#icon-linkedin"></use>
+							</svg>
+						</a>
+					</li>
+					<li>
+						<a href="https://dribbble.com/StDusan" target="_blank" rel="noopener noreferrer">
+							<svg role="presentation" class="o-icon">
+								<use xlink:href="build/img/icons.svg#icon-dribbble"></use>
+							</svg>
+						</a>
+					</li>
+					<li>
+						<a href="mailto:stdusan@gmail.com">
+							<svg role="presentation" class="o-icon">
+								<use xlink:href="build/img/icons.svg#icon-email"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 
-    <script src="./build/main.js" defer></script>
-  </body>
+		<script src="./build/main.js" defer></script>
+	</body>
 </html>
