feat: added AI project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<a class="glightbox" href="./build/img/zossma-product.jpg"><img src="./build/img/zossma-product.jpg" alt="Zossma product" /></a>
 					<a class="glightbox" href="./build/img/aurora-kursevi.jpg"><img src="./build/img/aurora-kursevi.jpg" alt="Aurora kursevi" /></a>
 					<a class="glightbox" href="./build/img/bgn-home.jpg"><img src="./build/img/bgn-home.jpg" alt="BGnekretnine" /></a>
+					<a class="glightbox" data-glightbox="title: Ana Ivanovic (2010-2014);" href="./build/img/ana-ivanovic-2010-2014.jpg"><img src="./build/img/ana-ivanovic-2010-2014.jpg" alt="Ana Ivanovic" /></a>
 					<a class="glightbox" data-glightbox="title: After Project (2011);" href="./build/img/afterproject-home.jpg"><img src="./build/img/afterproject-home.jpg" alt="Afterproject" /></a>
 					<a class="glightbox" data-glightbox="title: Hampleton Partners (2013);" href="./build/img/hampleton-home.jpg"><img src="./build/img/hampleton-home.jpg" alt="Hampleton" /></a>
 					<a class="glightbox" data-glightbox="title: Sports4kids (2012);" href="./build/img/sports4kids-home.jpg"><img src="./build/img/sports4kids-home.jpg" alt="Sports4kids" /></a>
