--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<a class="glightbox" href="./build/img/zossma-home.jpg"><img src="./build/img/zossma-home.jpg" alt="Zossma home" /></a>
 					<a class="glightbox" href="./build/img/helix-home.jpg"><img src="./build/img/helix-home.jpg" alt="Helix equities" /></a>
 					<a class="glightbox" href="./build/img/fourview-profile.jpg"><img src="./build/img/fourview-profile.jpg" alt="Fourview profile" /></a>
+					<a class="glightbox" href="./build/img/holycode.jpg"><img src="./build/img/holycode.jpg" alt="Holycode home" /></a>
 					<a class="glightbox" href="./build/img/ED-home.jpg"><img src="./build/img/ED-home.jpg" alt="EtonDigital home" /></a>
 					<a class="glightbox" href="./build/img/DH-home.jpg"><img src="./build/img/DH-home.jpg" alt="Digital horse" /></a>
 					<a class="glightbox" href="./build/img/Frachtbox-home.jpg"><img src="./build/img/Frachtbox-home.jpg" alt="Frachtbox" /></a>
