added kate bush proposals

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 					<a class="glightbox" href="./build/img/jpr-home.jpg"><img src="./build/img/jpr-home.jpg" alt="JPR" /></a>
 					<a class="glightbox" href="./build/img/zossma-home.jpg"><img src="./build/img/zossma-home.jpg" alt="Zossma home" /></a>
 					<a class="glightbox" href="./build/img/helix-home.jpg"><img src="./build/img/helix-home.jpg" alt="Helix equities" /></a>
+					<a class="glightbox" href="./build/img/katebush-0.jpg"><img src="./build/img/katebush-0.jpg" alt="Kate Bush proposal" /></a>
+					<a class="glightbox" href="./build/img/katebush-1.jpg"><img src="./build/img/katebush-1.jpg" alt="Kate Bush proposal" /></a>
 					<a class="glightbox" href="./build/img/fourview-profile.jpg"><img src="./build/img/fourview-profile.jpg" alt="Fourview profile" /></a>
 					<a class="glightbox" href="./build/img/holycode.jpg"><img src="./build/img/holycode.jpg" alt="Holycode home" /></a>
 					<a class="glightbox" href="./build/img/ED-home.jpg"><img src="./build/img/ED-home.jpg" alt="EtonDigital home" /></a>
